<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ORTC Android Sample</string>
    <string name="action_settings">Settings</string>
    <string name="OrtcTitle">Connecting</string>
    <string name="ChannelName">Channel</string>


    <string name="ButtonLabelSubscribe">Subscribe</string>
    <string name="ButtonLabelUnsubscribe">Unsubscribe</string>
    <string name="ButtonLabelSend">Send Message</string>
    <string name="ButtonLabelConnect">Connect</string>
    <string name="ButtonLabelDisconnect">Disconnect</string>
    <string name="ButtonLabelPresence">Presence</string>
    <string name="ButtonLabelEnablePresence">Enable Presence</string>
    <string name="ButtonLabelDisablePresence">Disable Presence</string>
    <string name="ButtonLabelClear">Clear Log</string>
    <string name="LogName">Log</string>

    <string name="DefaultServer">http://ortc-developers.realtime.co/server/2.1/</string>

    <string name="DefaultChannel">my_channel</string>

    <string name="DefaultText">My Android Super Message!</string>

    <string name="DefaultAuthenticationToken">YOUR_AUTHENTICATION_TOKEN</string>

    <string name="DefaultApplicationKey">YOUR_APPLICATION_KEY</string>

    <string name="DefaultPrivateKey">YOUR_PRIVATE_KEY</string>

    <string name="DefaultConnectionMetadata">AndroidConnMeta</string>



</resources>