<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:overScrollMode="always"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:id="@+id/linearLayout1"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/ButtonConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="connect"
                android:text="@string/ButtonLabelConnect"/>

            <Button
                android:id="@+id/ButtonDisconnect"
                android:onClick="disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonLabelDisconnect"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ButtonSubscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="subscribe"
                android:text="@string/ButtonLabelSubscribe"/>

            <Button
                android:id="@+id/ButtonUnsubscribe"
                android:onClick="unsubscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonLabelUnsubscribe"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayou3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/ButtonEnablePresence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="enablePresence"
                android:text="@string/ButtonLabelEnablePresence"/>

            <Button
                android:id="@+id/ButtonDisablePresence"
                android:onClick="disablePresence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonLabelDisablePresence"
                android:layout_weight="1"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayou4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/ButtonSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sendClickEventHandler"
                android:text="@string/ButtonLabelSend"/>

            <Button
                android:id="@+id/ButtonPresence"
                android:onClick="presenceClickEventHandler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonLabelPresence"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewLogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogName"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/TextViewLog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:minLines="10"
            android:background="@color/black" />

        <Button
            android:id="@+id/ButtonClear"
            android:onClick="clearClickEventHandler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonLabelClear"
            android:layout_gravity="end"/>

    </LinearLayout>

</ScrollView>